--- a/virtual_environment_setup.ipynb
+++ b/virtual_environment_setup.ipynb
@@ -12,31 +12,104 @@
     "## Conda path\n",
     "\n",
     "### 1) Install\n",
-    "- **Windows & Intel Mac:** Install Miniconda or Anaconda.\n",
-    "- After install, open a new Terminal/PowerShell. If `conda` isn’t found, run `conda init` (e.g., `conda init zsh`) and restart the terminal.\n",
-    "\n",
+    "- **Windows & Mac:** Install Anaconda.\n",
+    "- After installation, open a new Terminal/Command Prompt.\n",
+    "If conda isn’t recognized, run conda init zsh (macOS) or conda init cmd.exe (Windows), then reopen the terminal.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "312cadc7-09d9-4330-9015-818851fdb5e4",
+   "metadata": {},
+   "source": [
     "### 2) Create and activate the environment\n",
-    "```bash\n",
+    "Go to the virtual_environment folder (where environment.yml lives):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5957a452-b9f0-400b-b417-0c218b82215e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd path\\to\\your\\virtual_environment_setup_directory # you need to revise the path\n",
+    "\n",
+    "# Create the environment:\n",
     "conda env create -f environment.yml\n",
-    "conda activate ling-env\n",
-    "```\n",
     "\n",
-    "### 3) Download language resources\n",
-    "```bash\n",
+    "# Activate the environment\n",
+    "conda activate ling-env"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b2e6ece-27a1-448b-b479-be7c9f16a6ad",
+   "metadata": {},
+   "source": [
+    "### 3) Download language resources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43004bf3-d845-4f51-befb-a82ffebb3769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "python -m spacy download en_core_web_sm\n",
-    "python - <<'PY'\n",
-    "import nltk; nltk.download('punkt'); nltk.download('stopwords')\n",
-    "PY\n",
-    "```\n",
     "\n",
-    "### 4) Register the Jupyter kernel\n",
-    "```bash\n",
-    "python -m ipykernel install --user --name ling-env --display-name \"Python (LING-ENV)\"\n",
+    "python -c \"import nltk; nltk.download('punkt'); nltk.download('stopwords')\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40cb26e8-b6ad-4f2d-893d-e7445acb8496",
+   "metadata": {},
+   "source": [
+    "### 4) Register the Jupyter kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a67330d-09a7-485b-b8be-13e43aaf0dc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python -m ipykernel install --user --name ling-env --display-name \"Python (LING-ENV)\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef9cbf03-d3ed-454c-ab30-cc1d6a0d93ca",
+   "metadata": {},
+   "source": [
+    "### 5) Launch Jupyter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "77e12ca0-32bc-4272-ba43-b847c440607c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start JupyterLab or classic Notebook:\n",
     "jupyter lab\n",
-    "```\n",
+    "# or\n",
+    "jupyter notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ad86b7e-3e8d-4500-a694-d858d375b4b7",
+   "metadata": {},
+   "source": [
+    "### 6) Switch Kernel\n",
+    "In each notebook, choose Kernel → Change/Select Kernel → Python (LING-ENV).\n",
     "\n",
-    "In each notebook, pick Kernel → Select Kernel → Python (LING-ENV).\n",
-    "![change_kernal](img/change_kernal_1.png)\n"
+    "![change_kernal](img/switch_kernel.png)"
    ]
   },
   {
@@ -44,13 +117,13 @@
    "id": "7cf7aee1-1339-460b-88c9-be441f422ffa",
    "metadata": {},
    "source": [
-    "### 5) Quick pre-flight cell\n",
+    "### 5) Quick verification\n",
     "Run the following code when you are in LING-ENV."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "7ab8cb77-9547-4c8e-8d89-042d99ec8a54",
    "metadata": {},
    "outputs": [
@@ -59,7 +132,7 @@
      "output_type": "stream",
      "text": [
       "Python: 3.11.13\n",
-      "Env: ling-env\n",
+      "Env: base\n",
       "Kernel: /opt/anaconda3/envs/ling-env/bin/python\n",
       "numpy        1.26.4\n",
       "pandas       2.3.3\n",
@@ -104,73 +177,6 @@
     "    try: nltk.data.find(where); print(f\"NLTK data: {pkg} ✅\")\n",
     "    except LookupError: raise SystemExit(f\"❌ Missing NLTK data '{pkg}'. See setup instructions.\")\n",
     "print(\"✅ Environment check passed.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f70686aa-ff8c-4b75-a426-9f022c977bdc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Compatibility]\n",
-      "spaCy: 3.8.7 | NumPy: 1.26.4\n",
-      "spaCy requires NumPy >=1.15.0\n",
-      "Version rule satisfied: ✅\n",
-      "Runtime smoke test: ✅ passed\n"
-     ]
-    }
-   ],
-   "source": [
-    "# --- Compatibility check: spaCy ↔ NumPy ---\n",
-    "import importlib.metadata as im\n",
-    "from packaging.version import Version\n",
-    "from packaging.requirements import Requirement\n",
-    "\n",
-    "np_ver = Version(__import__(\"numpy\").__version__)\n",
-    "spacy_ver = Version(spacy.__version__)\n",
-    "\n",
-    "# 1) 读取 spaCy 对 numpy 的声明式依赖（PEP 621 元数据）\n",
-    "numpy_spec = None\n",
-    "try:\n",
-    "    reqs = im.requires(\"spacy\") or []\n",
-    "    for r in reqs:\n",
-    "        req = Requirement(r)\n",
-    "        if req.name.lower() == \"numpy\" and req.specifier:\n",
-    "            numpy_spec = str(req.specifier)  # 例如 '>=1.19.0,<3.0.0'\n",
-    "            break\n",
-    "except Exception:\n",
-    "    pass\n",
-    "\n",
-    "print(\"\\n[Compatibility]\")\n",
-    "print(\"spaCy:\", spacy_ver, \"| NumPy:\", np_ver)\n",
-    "if numpy_spec:\n",
-    "    print(\"spaCy requires NumPy\", numpy_spec)\n",
-    "    # 用 packaging 检查当前 numpy 是否满足约束\n",
-    "    from packaging.specifiers import SpecifierSet\n",
-    "    ok = np_ver in SpecifierSet(numpy_spec)\n",
-    "    print(\"Version rule satisfied:\", \"✅\" if ok else \"❌\")\n",
-    "else:\n",
-    "    print(\"Could not read spaCy's declared NumPy requirement (metadata missing).\")\n",
-    "\n",
-    "# 2) 运行时小烟囱测试（np<->spaCy 往返）\n",
-    "try:\n",
-    "    nlp = spacy.load(\"en_core_web_sm\")\n",
-    "    doc = nlp(\"NumPy and spaCy should cooperate nicely.\")\n",
-    "    # 把 token 长度向量化到 NumPy，再做一次简单变换\n",
-    "    import numpy as np\n",
-    "    lens = np.array([len(t.text) for t in doc], dtype=np.int32)\n",
-    "    assert lens.ndim == 1 and lens.size == len(doc)\n",
-    "    # 构造一个假“特征矩阵”，做点简单算术（确保二者 ABI/类型协作正常）\n",
-    "    feats = np.vstack([lens, lens**2]).T.astype(np.float64)\n",
-    "    _ = feats @ np.array([[0.1],[0.01]])  # 线性组合\n",
-    "    print(\"Runtime smoke test:\", \"✅ passed\")\n",
-    "except Exception as e:\n",
-    "    print(\"Runtime smoke test: ❌ failed ->\", type(e).__name__, e)\n"
    ]
   }
  ],
